Remove redundant comments and blank lines across tests and runtime classes.